cmake_minimum_required(VERSION 3.29)
project(CasoFinal_Integrador_Tema3_JuanIgnacio_Gonzalez)

set(CMAKE_CXX_STANDARD 14)

add_executable(CasoFinal_Integrador_Tema3_JuanIgnacio_Gonzalez
    .idea/.gitignore
    .idea/vcs.xml
    .idea/workspace.xml
    main.c
    README.md
        Manejo_Errores/Manejo_errores.c)
